--- a/Templates/demo/settings.gradle
+++ b/Templates/demo/settings.gradle
@@ -1,1 +1,12 @@
+pluginManagement {
+    plugins {
+        id 'helloPlugin' version "${helloPluginVersion}"
+    }
+    resolutionStrategy {
+    }
+    repositories {
+    }
+}
+
 rootProject.name = 'demo'
+
