--- a/Templates/demo/gradle.properties
+++ b/Templates/demo/gradle.properties
@@ -1,1 +1,7 @@
 helloPluginVersion = "0.1.0"
+
+org.gradle.jvmargs=-Xms512m -Xmx1024m
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
