--- a/Templates/springboot/src/main/resources/application.properties
+++ b/Templates/springboot/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+
 server.port=8080
 
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{15} ===> %msg%n
+
+logging.level.root=info
+logging.group.demo=com.example.demo, com.example.demo2
+logging.level.sql=debug
+logging.level.web=debug
+
+# log file path and name
+# logging.file=logs/demo.log
