--- a/Templates/springboot/src/main/resources/application.properties
+++ b/Templates/springboot/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# check which profile is active
+# debug=true
+
+spring.banner.location=classpath:banner.txt
+spring.main.banner-mode=console
 
 server.port=8080
 
@@ -9,4 +14,14 @@ logging.level.sql=debug
 logging.level.web=debug
 
 # log file path and name
-# logging.file=logs/demo.log
+logging.file.name=logs/demo.log
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=America/New_York
+spring.datasource.username=root
+spring.datasource.password=root
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.example.demo.model
+mybatis.configuration.map-underscore-to-camel-case=true
