--- a/Templates/springboot/src/main/resources/application.properties
+++ b/Templates/springboot/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # check which profile is active
 # debug=true
 
+spring.profiles.active=default
+
 spring.banner.location=classpath:banner.txt
 spring.main.banner-mode=console
 
