--- a/Templates/springboot/src/main/resources/application.properties
+++ b/Templates/springboot/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.file.name=logs/demo.log
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=America/New_York
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?characterEncoding=utf8&useSSL=false&serverTimezone=America/New_York
 spring.datasource.username=root
 spring.datasource.password=root
 
